--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         
         <!-- Intro -->
         <div class="intro">
-          <h2>Hi! I am</h2>
-          <h1>Nomaira Fariah.</h1>
+          <h2>Hi! I'm</h2>
+          <h1>Nomaira.</h1>
           <h3>a developer and analyst.</h3>
           <button class="cta-btn" onclick="document.location='projects.html'">
             Portfolio
